# minipeak

./: .gitignore  CMakeLists.txt  Dockerfile  create_header.py  create_shader_register.py
apps/: CMakeLists.txt  clmempeak.cpp  clminipeak.cpp  glmempeak.cpp  glminipeak.cpp  panfrost_drmDump.c  timeit.h  vkminipeak.cpp
apps/shaders/: compute_sp_v1.glsl  compute_sp_v16.glsl  compute_sp_v2.glsl  compute_sp_v4.glsl  compute_sp_v8.glsl  header.h
apps/shaders/spv/: compute_sp_v1.spv  compute_sp_v16.spv  compute_sp_v2.spv  compute_sp_v4.spv  compute_sp_v8.spv
include/minipeak/gpu/: Buffer.h  BufferInfo.h  DeviceInfo.h  Node.h  PlatformSettings.h
include/minipeak/opencl/: Buffer.h  Context.h  Kernel.h  Node.h
include/minipeak/opengl/: Context.h  Node.h  buffer.h  program.h  shaderdb.h
include/minipeak/vulkan/: Context.h  VBuffer.h
src/gpu/: Buffer.cpp  BufferInfo.cpp  Node.cpp  PlatformSettings.cpp
src/opencl/: Buffer.cpp  Context.cpp  Kernel.cpp  Node.cpp
src/opengl/: Context.cpp  Node.cpp  buffer.cpp  data_access.glsl  program.cpp  shaderdb.cpp
src/vulkan/: Context.cpp  VBuffer.cpp
